--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "@firebolt-js/manage-sdk": "1.0.0",
     "@firebolt-js/sdk": "1.0.0",
     "axios": "^1.7.9",
-    "configModule": "git+ssh://git@github.com-ghec:comcast-firebolt/xumo-remote-config-module",
-    "cucumber-json-report-formatter": "git+ssh://git@github.com-ghec:comcast-firebolt/cucumber-json-report-formatter.git",
+    "configModule": "./defaultModule",
+    "cucumber-json-report-formatter": "^0.1.4",
     "cross-spawn": "^7.0.3",
     "cypress": "^12.0.0",
     "esbuild": "^0.17.0",
