feat: Add fireLog dependency (#457)

--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "setimmediate": "^1.0.5",
     "shell-exec": "1.0.2",
     "uuid": "^8.3.1",
+    "soft-assert": "^0.2.7",
+    "fireLog": "file:./cypress/support/cypress-support/src/fireLog"
     "soft-assert": "^0.2.7"
   },
   "devDependencies": {
