addressed not supported transition comment

--- a/cypress/support/cypress-support/src/lifecycle/2.x/lifecycleConfig.json
+++ b/cypress/support/cypress-support/src/lifecycle/2.x/lifecycleConfig.json
@@ -6,6 +6,13 @@
     "suspended": ["paused", "hibernated"],
     "hibernated": ["suspended"]
   },
+  "invalidTransitionFireboltEvents": {
+    "initializing": [],
+    "paused": ["onResume", "onPause"],
+    "active": ["onActivate"],
+    "suspended": ["onSuspend", "onRestore"],
+    "hibernated": ["onHibernate"]
+  },
   "expectedFireboltEvents": {
     "paused": {
       "active": [
