--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "supportedSDKVersion": "1.5.0"
   },
   "scripts": {
-    "cy:open": "npm run checkDefaultConfig && yarn cache clean && node ./Scripts/run.js open",
-    "cy:run": "npm run checkDefaultConfig && yarn cache clean && node ./Scripts/run.js run",
+    "generate:feature": "node scripts/generateFeature.js",
+    "cy:open": "npm run checkDefaultConfig && npm run generate:feature && yarn cache clean && node ./Scripts/run.js open",
+    "cy:run": "npm run checkDefaultConfig && npm run generate:feature && yarn cache clean && node ./Scripts/run.js run",
     "softRefresh": "yarn install && yarn upgrade",
     "hardRefresh": "rm -rf node_modules && yarn cache clean && yarn softRefresh",
     "checkDefaultConfig": "node ./Scripts/checkDefaultConfig.js",
