--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "supportedSDKVersion": "1.5.0"
   },
   "scripts": {
-    "generate:feature": "node scripts/generateFeature.js",
+    "generate:feature": "node ./Scripts/generateFeature.js",
     "cy:open": "npm run checkDefaultConfig && npm run generate:feature && yarn cache clean && node ./Scripts/run.js open",
     "cy:run": "npm run checkDefaultConfig && npm run generate:feature && yarn cache clean && node ./Scripts/run.js run",
     "softRefresh": "yarn install && yarn upgrade",
