--- a/package.json
+++ b/package.json
@@ -28,51 +28,51 @@
   "author": "Comcast Firebolt Certification Team",
   "license": "ISC",
   "dependencies": {
-    "@apidevtools/json-schema-ref-parser": "^9.0.9",
-    "@badeball/cypress-cucumber-preprocessor": "^15.0.0",
-    "@bahmutov/cypress-esbuild-preprocessor": "^2.2.0",
-    "@esbuild-plugins/node-globals-polyfill": "^0.2.0",
-    "@esbuild-plugins/node-modules-polyfill": "^0.1.4",
+    "@apidevtools/json-schema-ref-parser": "9.1.2",
+    "@badeball/cypress-cucumber-preprocessor": "15.1.5",
+    "@bahmutov/cypress-esbuild-preprocessor": "2.2.8",
+    "@esbuild-plugins/node-globals-polyfill": "0.2.3",
+    "@esbuild-plugins/node-modules-polyfill": "0.1.4",
     "@firebolt-js/manage-sdk": "1.0.0",
     "@firebolt-js/sdk": "1.0.0",
-    "axios": "^1.7.9",
-    "configModule": "./defaultModule",
-    "cucumber-json-report-formatter": "^0.1.4",
-    "cross-spawn": "^7.0.3",
-    "cypress": "^15.4.0",
-    "esbuild": "^0.17.0",
-    "flatted": "^3.3.1",
-    "jsdom": "^24.0.0",
+    "axios": "1.13.2",
+    "configModule": "git+ssh://git@github.com-ghec/comcast-firebolt/sky-config-module.git#static-deps",
+    "cucumber-json-report-formatter": "0.1.4",
+    "cross-spawn": "7.0.6",
+    "cypress": "15.8.2",
+    "esbuild": "0.17.19",
+    "flatted": "3.3.3",
+    "jsdom": "24.1.3",
     "json-merger": "1.1.10",
-    "jsonpath": "^1.1.1",
+    "jsonpath": "1.1.1",
     "jsonschema": "1.4.1",
-    "lint": "^0.8.19",
-    "lodash": "^4.17.21",
-    "luxon": "^3.4.4",
-    "mochawesome": "^6.1.1",
-    "mochawesome-merge": "^4.2.0",
-    "mochawesome-report-generator": "^5.2.0",
-    "multiple-cucumber-html-reporter": "^2.0.0",
-    "regex-parser": "^2.3.0",
-    "setimmediate": "^1.0.5",
+    "lint": "0.8.19",
+    "lodash": "4.17.21",
+    "luxon": "3.7.2",
+    "mochawesome": "6.3.1",
+    "mochawesome-merge": "4.4.1",
+    "mochawesome-report-generator": "5.2.0",
+    "multiple-cucumber-html-reporter": "2.0.0",
+    "regex-parser": "2.3.1",
+    "setimmediate": "1.0.5",
     "shell-exec": "1.0.2",
-    "uuid": "^8.3.1",
-    "soft-assert": "^0.2.7",
+    "uuid": "8.3.2",
+    "soft-assert": "0.2.7",
     "fireLog": "file:./cypress/support/cypress-support/src/fireLog"
   },
   "devDependencies": {
-    "babel-jest": "^27.4.5",
-    "@commitlint/config-conventional": "^17.1.0",
-    "eslint": "^8.47.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-import": "^2.28.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "jest": "^27.4.5",
-    "prettier": "^3.0.2",
-    "@semantic-release/changelog": "^6.0.1",
-    "@semantic-release/git": "^10.0.1",
-    "@semantic-release/npm": "^9.0.1",
-    "semantic-release": "^19.0.5"
+    "babel-jest": "27.5.1",
+    "@commitlint/config-conventional": "17.8.1",
+    "eslint": "8.57.1",
+    "eslint-config-prettier": "9.1.2",
+    "eslint-plugin-import": "2.32.0",
+    "eslint-plugin-prettier": "5.5.4",
+    "jest": "27.5.1",
+    "prettier": "3.7.4",
+    "@semantic-release/changelog": "6.0.3",
+    "@semantic-release/git": "10.0.1",
+    "@semantic-release/npm": "9.0.2",
+    "semantic-release": "19.0.5"
   },
   "cypress-cucumber-preprocessor": {
     "json": {
